[project]
name = "terraform-aws-migadu-email-domain"
version = "0.1.0"
description = "Development tooling for a Terraform module"
authors = [{name = "Richtman, Ariel" , email = "10679234+arichtman@users.noreply.github.com"}]
license = "GPL-3.0+"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
